--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 <link rel='stylesheet' type='text/css' href='svgdna.css'>
 
+<p>Generation: <span id='generation'>0</span></p>
+<p>Time: <span id='time'>0</span></p>
+<p>Generations/sec: <span id='speed'>?</span></p>
+
 <div class='box'>
   <canvas id='target'></canvas>
   <p>Target</p>
