--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 <p>Time: <span id='time'>0</span></p>
 <p>Generations/sec: <span id='speed'>?</span></p>
 
-<div class='box'>
-  <canvas id='target'></canvas>
-  <p>Target</p>
-</div>
+<section id='boxes'>
+  <div class='box'>
+    <canvas id='target'></canvas>
+    <p>Target</p>
+  </div>
+</section>
+
+<p>Inspired by <a href='http://rogeralsing.com/2008/12/11/genetic-programming-mona-lisa-source-code-and-binaries/'>Roger Alsing's Mona Lisa</a></p>
 
 <script type='application/javascript' src='svgdna.js'></script>
