allow circles to start as ovals

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <canvas id='target'></canvas>
     <p>Target</p>
   </div>
+  <div class='box'>
+    <canvas id=weights'></canvas>
+    <p>Weights</p>
+  </div>
 </section>
 
 <p>Inspired by <a href='http://rogeralsing.com/2008/12/11/genetic-programming-mona-lisa-source-code-and-binaries/'>Roger Alsing's Mona Lisa</a></p>
