add image choices

--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 
 <link rel='stylesheet' type='text/css' href='svgdna.css'>
 
-<h2>Vector Image Evolution</h2>
+<h2>Vector Painting Evolution</h2>
 
 <table>
+  <tr><th>Source image:    <td>
+                             <select id='image' name='image' visible='1'>
+                               <option>Lenna.jpg</option>
+                               <option>MonaLisa.jpg</option>
+                               <option>StarryNight.jpg</option>
+                               <option>AmericanGothic.jpg</option>
+                               <option>ShadySpot.jpg</option>
+                               <option>FantasyIsland.jpg</option>
+                               <option>Flowers.jpg</option>
+                               <option>HanaleiValley.jpg</option>
+                               <option>Kitties.jpg</option>
+                               <option>ZhangJiaJie.jpg</option>
+                             </select>
   <tr><th>Generation:      <td id='generation'>0
   <tr><th>Time:            <td id='time'>0
   <tr><th>Generations/sec: <td id='speed'>?
