--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <title>SVG DNA</title>
 
 <link rel='stylesheet' type='text/css' href='svgdna.css'>
@@ -36,4 +38,4 @@
 
 <p>Inspired by <a href='http://rogeralsing.com/2008/12/11/genetic-programming-mona-lisa-source-code-and-binaries/'>Roger Alsing's Mona Lisa</a></p>
 
-<script type='application/javascript' src='svgdna.js'></script>
+<script src='svgdna.js'></script>
