change source link to github

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </table>
 
 <p id='footer'>
-  <a href='svgdna.ls'>The source code is here.</a>
+  <a href='https://github.com/svachalek/svgdna'>The source code is here.</a>
   Written in LiveScript by <a href="mailto:svachalek@gmail.com">Scott Vachalek</a>.
   Inspired by <a href='http://rogeralsing.com/2008/12/11/genetic-programming-mona-lisa-source-code-and-binaries/'>Roger Alsing's Mona Lisa</a>.
 
