--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<meta charset='utf-8'>
+
 <title>SVG DNA</title>
 
 <link rel='stylesheet' type='text/css' href='svgdna.css'>
@@ -50,7 +52,7 @@
   <div class='legend crossbreed'> </div>  <label>Crossbreed</label>
 </div>
 
-<div class='score'>240 [35] (MX3)</div> <label>Accuracy score (lower is better), number of shapes, origin code and age.</label>
+<div class='score'>Δ240 #35 MX3</div> <label>Accuracy score (lower is better), number of shapes, origin code and age.</label>
 
 <table>
 </table>
