--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
   These paintings are mutated by adding, removing, or altering components, and also
   cross-bred with other paintings. The results are compared to the image labeled "Target",
   paying particular attention to areas shown in the image labeled "Weights".
-  The best image and a selection of the others are retained, the rest are thrown out,
-  and the process repeats.
+  The dark areas in the "Differences" image show where the target image is most different
+  from the best solution. The best image and a selection of the others are retained, the
+  rest are thrown out, and the process repeats.
 
 <table id='stats'>
-  <tr><th>Source image:    <td>
+  <tr><th>Target image:    <td>
                              <select id='image' name='image' visible='1'>
                                <option>Lenna.jpg</option>
                                <option>MonaLisa.jpg</option>
@@ -37,12 +38,16 @@
 
 <section id='boxes'>
   <div id='target-box' class='box'>
-    <canvas id='target'></canvas>
+    <canvas id='target' width=100 height=100></canvas>
     <p>Target</p>
   </div>
   <div id='weights-box' class='box'>
-    <canvas id='weights'></canvas>
+    <canvas id='weights' width=100 height=100></canvas>
     <p>Weights</p>
+  </div>
+  <div id='diff-box' class='box'>
+    <canvas id='diff' width=100 height=100></canvas>
+    <p>Differences</p>
   </div>
 </section>
 
@@ -52,7 +57,7 @@
   <div class='legend crossbreed'> </div>  <label>Crossbreed</label>
 </div>
 
-<div class='score'>Δ240 #35 MX3</div> <label>Accuracy score (lower is better), number of shapes, origin code and age.</label>
+<div class='score'>@240 #35 MX3</div> <label>Accuracy score (lower is better), number of shapes, origin code and age.</label>
 
 <table>
 </table>
