start with random image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <table id='stats'>
   <tr><th>Target image:    <td>
-                             <select id='image' name='image' visible='1'>
+                             <select id='imageSelect' visible='1'>
                                <option>Lenna.jpg</option>
                                <option>MonaLisa.jpg</option>
                                <option>StarryNight.jpg</option>
