--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <p id='intro'>
   This page starts by creating a set of paintings that each contain one oval or triangle.
   These paintings are mutated by adding, removing, or altering components, and also
-  cross-bred with other paintings. The results are compared to the image labeled "Target",
-  paying particular attention to areas shown in the image labeled "Weights".
-  The dark areas in the "Differences" image show where the target image is most different
+  cross-bred with other paintings. The results are compared to the image labeled <em>Target</em>,
+  paying particular attention to areas shown in the image labeled <em>Weights</em>.
+  The dark areas in the <em>Differences</em> image show where the target image is most different
   from the best solution. The best image and a selection of the others are retained, the
   rest are thrown out, and the process repeats.
 
