--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
 
 <h2>Vector Painting Evolution</h2>
 
-<p id='intro'>
+<div id='intro'>
+  <p>
   This page starts by creating a set of paintings that each contain one oval or triangle.
   These paintings are mutated by adding, removing, or altering components, and also
-  cross-bred with other paintings. The results are compared to the image labeled <em>Target</em>,
+  cross-bred with other paintings. 
+  <p>
+  The results are compared to the image labeled <em>Target</em>,
   paying particular attention to areas shown in the image labeled <em>Weights</em>.
+  <p>
   The dark areas in the <em>Differences</em> image show where the target image is most different
-  from the best solution. When a mutation is better than its parent, it replaces it; when a
-  cross is better than one if its parents it will replace it. The process repeats as fast as
-  possible, and after 2000 or 3000 generations you should begin to recognize the result.
+  from the best solution.
+  <p>
+  When a mutation is better than its parent or when a cross is better than one of its parents
+  it will replace it. The process repeats as fast as possible, and after 2000 or 3000
+  generations you should begin to recognize the result.
+</div>
 
 <table id='stats'>
   <tr><th>Target image:    <td>
