--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <div class='legend crossbreed'> </div>  <label>Crossbreed</label>
 </div>
 
-<div class='score'>240 MX3</div> <label>Accuracy score (lower is better), origin code, and age.</label>
+<div class='score'>240 X3</div> <label>Accuracy score (lower is better), origin code, and age.</label>
 
 <table>
 </table>
