add large views

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
   <tr><th>Generations/sec: <td id='speed'>?
 </table>
 
+<div>
+  <img id='target-large'>
+  <canvas id='best-large'>
+</div>
+
 <section id='boxes'>
   <div id='target-box' class='box'>
     <canvas id='target' width=100 height=100></canvas>
