--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
   <tr><th>Generations/sec: <td id='speed'>?
 </table>
 
+<div>
+  <img id='target-large'>
+  <canvas id='best-large'>
+</div>
+
 <section id='boxes'>
   <div id='target-box' class='box'>
     <canvas id='target' width=100 height=100></canvas>
@@ -64,7 +69,7 @@
   <div class='legend crossbreed'> </div>  <label>Crossbreed</label>
 </div>
 
-<div class='score'>240 MX3</div> <label>Accuracy score (lower is better), origin code, and age.</label>
+<div class='score'>240 X3</div> <label>Accuracy score (lower is better), origin code, and age.</label>
 
 <table>
 </table>
