--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
   <tr><th class='major'>Generation:     <td id='generation'>0
   <tr><th class='major'>Time:           <td id='time'>0
   <tr><th>Generations/sec:              <td id='speed'>N/A
-  <tr><th>Add mutation success:         <td id='success-add'>0%
-  <tr><th>Remove mutation success:      <td id='success-remove'>0%
-  <tr><th>Order mutation success:       <td id='success-order'>0%
-  <tr><th>Size mutation success:        <td id='success-size'>0%
-  <tr><th>Position mutation success:    <td id='success-position'>0%
-  <tr><th>Orientation mutation success: <td id='success-orientation'>0%
-  <tr><th>Color mutation success:       <td id='success-color'>0%
-  <tr><th>Shape mutation success:       <td id='success-shape'>0%
+  <tr><th>Add shape success:            <td id='success-add'>0%
+  <tr><th>Remove shape success:         <td id='success-remove'>0%
+  <tr><th>Reorder shapes success:       <td id='success-order'>0%
+  <tr><th>Resize shape success:         <td id='success-size'>0%
+  <tr><th>Reposition shape success:     <td id='success-position'>0%
+  <tr><th>Reorient shape success:       <td id='success-orientation'>0%
+  <tr><th>Change outline success:       <td id='success-shape'>0%
+  <tr><th>Recolor success:              <td id='success-color'>0%
   <tr><th>Crossbreed success:           <td id='success-cross'>0%
 </table>
 
