allow rectangle paths

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <div id='intro'>
   <p>
-  This page starts by creating a set of paintings that each contain one oval or triangle.
-  These paintings are mutated by adding, removing, or altering components, and also
+  This page starts by creating a set of paintings that each contain one oval, triangle, or
+  rectangle.  These paintings are mutated by adding, removing, or altering components, and also
   cross-bred with other paintings. 
   <p>
   The results are compared to the image labeled <em>Target</em>,
