add stat reset button

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <option>Kitties.jpg</option>
       <option>ZhangJiaJie.jpg</option>
     </select>
-  <tr><th class='major'>Generation:     <td id='generation'>0
+  <tr><th class='major'>Generations:    <td id='generation'>0
   <tr><th class='major'>Time:           <td id='time'>0
   <tr><th>Generations/sec:              <td id='speed'>N/A
   <tr><th>Add shape success:            <td id='success-add'>0%
@@ -55,6 +55,7 @@
   <tr><th>Change outline success:       <td id='success-shape'>0%
   <tr><th>Recolor success:              <td id='success-color'>0%
   <tr><th>Crossbreed success:           <td id='success-cross'>0%
+  <tr><th>                              <td><button id='reset-stats'>Reset Stats
 </table>
 
 <section id='boxes'>
