--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   rectangle.  These paintings are mutated by adding, removing, or altering components, and also
   cross-bred with other paintings. 
   <p>
-  The results are compared to the image labeled <em>Target</em>,
-  paying particular attention to areas shown in the image labeled <em>Weights</em>.
+  The results are compared to the image labeled <em>Target</em>, paying particular attention 
+  to dark areas shown in the image labeled <em>Weights</em>.
   The dark areas in the <em>Differences</em> image show where the target image is most different
   from the best solution.
   <p>
