add background texture display option

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
       <option>Kitties.jpg</option>
       <option>ZhangJiaJie.jpg</option>
     </select>
+  <tr><th class='major'>Background texture:<td>
+    <select id='textureSelect' visible='1'>
+      <option>None</option>
+      <option selected>CreamPaper.png</option>
+    </select>
   <tr><th class='major'>Generations:    <td id='generation'>0
   <tr><th class='major'>Time:           <td id='time'>0
   <tr><th>Generations/sec:              <td id='speed'>N/A
