--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <select id='imageSelect' visible='1'>
       <option>Lenna.jpg</option>
       <option>MonaLisa.jpg</option>
+      <option>MonaLisaFace.jpg</option>
       <option>StarryNight.jpg</option>
       <option>AmericanGothic.jpg</option>
       <option>ShadySpot.jpg</option>
