add ability to paste arbitrary images

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       <option>Kitties.jpg</option>
       <option>ZhangJiaJie.jpg</option>
     </select>
+  <tr><th>URL:<td><input id='imageText' type='text'></div>
   <tr><th class='major'>Background texture:<td>
     <select id='textureSelect' visible='1'>
       <option>None</option>
