update to latest build

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <select id='imageSelect' visible='1'>
       <option>Lenna.jpg</option>
       <option>MonaLisa.jpg</option>
+      <option>MonaLisaFace.jpg</option>
       <option>StarryNight.jpg</option>
       <option>AmericanGothic.jpg</option>
       <option>ShadySpot.jpg</option>
@@ -42,6 +43,12 @@
       <option>HanaleiValley.jpg</option>
       <option>Kitties.jpg</option>
       <option>ZhangJiaJie.jpg</option>
+    </select>
+  <tr><th>URL:<td><input id='imageText' type='text'></div>
+  <tr><th class='major'>Background texture:<td>
+    <select id='textureSelect' visible='1'>
+      <option>None</option>
+      <option selected>CreamPaper.png</option>
     </select>
   <tr><th class='major'>Generations:    <td id='generation'>0
   <tr><th class='major'>Time:           <td id='time'>0
