--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <table id='stats'>
   <tr><th class='major'>Target image:<td>
     <select id='imageSelect' visible='1'>
+      <option>URL</option>
       <option>Lenna.jpg</option>
       <option>MonaLisa.jpg</option>
       <option>MonaLisaFace.jpg</option>
@@ -62,7 +63,7 @@
   <tr><th>Change outline success:       <td id='success-shape'>0%
   <tr><th>Recolor success:              <td id='success-color'>0%
   <tr><th>Crossbreed success:           <td id='success-cross'>0%
-  <tr><th>                              <td><button id='reset-stats'>Reset Stats
+  <tr><th>                              <td><button id='restart'>START OVER
 </table>
 
 <section id='boxes'>
