click to watch alternate

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
   When a mutation is better than its parent or when a cross is better than one of its parents
   it will replace it. The process repeats as fast as possible, and after 2000 or 3000
   generations you should begin to recognize the result.
+  <p>
+  You may right click on the top image to save it as an SVG. Left click one of the alternates
+  below to watch that one instead.
 </div>
 
 <table id='stats'>
