--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <div id='legend'>
   <div class='legend survivor'> </div>    <label>Survivor</label>
   <div class='legend mutant'> </div>      <label>Mutant</label>
-  <div class='legend crossbreed'> </div>  <label>Crossbreed</label>
+  <div class='legend crossover'> </div>   <label>Crossover</label>
 </div>
 
 <div class='score'>240 +3</div> <label>Accuracy score (lower is better) and age.</label>
