much improved crossover

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <tr><th>Reorient shape success:       <td id='success-orientation'>0%
   <tr><th>Change outline success:       <td id='success-shape'>0%
   <tr><th>Recolor success:              <td id='success-color'>0%
-  <tr><th>Crossbreed success:           <td id='success-cross'>0%
+  <tr><th>Crossover success:            <td id='success-cross'>0%
   <tr><th>                              <td><button id='restart'>START OVER
 </table>
 
