--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <div id='intro'>
   <p>
-  This page starts by creating a set of paintings that each contain one oval, triangle, or
-  rectangle.  These paintings are mutated by adding, removing, or altering components, and also
-  cross-bred with other paintings. 
+  This page starts by creating a set of paintings that each contain one triangle. These 
+  paintings are mutated by adding, removing, or altering components, and also cross-bred with
+  other paintings. 
   <p>
   The results are compared to the image labeled <em>Target</em>, paying particular attention 
   to dark areas shown in the image labeled <em>Weights</em>.
