update to latest build

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <div id='intro'>
   <p>
-  This page starts by creating a set of paintings that each contain one oval, triangle, or
-  rectangle.  These paintings are mutated by adding, removing, or altering components, and also
-  cross-bred with other paintings. 
+  This page starts by creating a set of paintings that each contain one triangle. These 
+  paintings are mutated by adding, removing, or altering components, and also cross-bred with
+  other paintings. 
   <p>
   The results are compared to the image labeled <em>Target</em>, paying particular attention 
   to dark areas shown in the image labeled <em>Weights</em>.
@@ -65,7 +65,7 @@
   <tr><th>Reorient shape success:       <td id='success-orientation'>0%
   <tr><th>Change outline success:       <td id='success-shape'>0%
   <tr><th>Recolor success:              <td id='success-color'>0%
-  <tr><th>Crossbreed success:           <td id='success-cross'>0%
+  <tr><th>Crossover success:            <td id='success-cross'>0%
   <tr><th>                              <td><button id='restart'>START OVER
 </table>
 
@@ -87,7 +87,7 @@
 <div id='legend'>
   <div class='legend survivor'> </div>    <label>Survivor</label>
   <div class='legend mutant'> </div>      <label>Mutant</label>
-  <div class='legend crossbreed'> </div>  <label>Crossbreed</label>
+  <div class='legend crossover'> </div>   <label>Crossover</label>
 </div>
 
 <div class='score'>240 +3</div> <label>Accuracy score (lower is better) and age.</label>
