--- a/foo.html
+++ b/foo.html
@@ -1,4 +1,4 @@
 
 <body style='background:url(textures/CreamPaper.png)'>
-  <img src=foo.svg style='max-width:100%;max-height:100%'>
+  <img src=foo.svg style='width:100%;height:100%' style='border: 4px solid black'>
 </body>
