--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   The dark areas in the <em>Differences</em> image show where the target image is most different
   from the best solution.
   <p>
-  When a mutation is better than its parent or when a cross is better than one of its parents
+  When a mutation is better than its parent or when a crossover is better than both of its parents
   it will replace it. The process repeats as fast as possible, and after 2000 or 3000
   generations you should begin to recognize the result.
   <p>
