--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <title>SVG DNA</title>
 
+<link rel='icon' type='image/png' sizes='any' href='images/dna.png'>
 <link rel='stylesheet' type='text/css' href='svgdna.css'>
 
 <h2>Vector Painting Evolution</h2>
