--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <title>SVG DNA</title>
 
+<link rel='icon' type='image/png' sizes='any' href='images/dna.png'>
 <link rel='stylesheet' type='text/css' href='svgdna.css'>
 
 <h2>Vector Painting Evolution</h2>
@@ -24,7 +25,7 @@
   The dark areas in the <em>Differences</em> image show where the target image is most different
   from the best solution.
   <p>
-  When a mutation is better than its parent or when a cross is better than one of its parents
+  When a mutation is better than its parent or when a crossover is better than both of its parents
   it will replace it. The process repeats as fast as possible, and after 2000 or 3000
   generations you should begin to recognize the result.
   <p>
@@ -89,11 +90,6 @@
   <div class='legend mutant'> </div>      <label>Mutant</label>
   <div class='legend crossover'> </div>   <label>Crossover</label>
 </div>
-
-<div class='score'>240 +3</div> <label>Accuracy score (lower is better) and age.</label>
-
-<table>
-</table>
 
 <p id='footer'>
   <a href='https://github.com/svachalek/svgdna'>The source code is here.</a>
