--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   <p>
   When a mutation is better than its parent or when a crossover is better than both of its parents
   it will replace it. The process repeats as fast as possible, and after 2000 or 3000
-  generations you should begin to recognize the result.
+  generations you should begin to recognize the result. After 30,000 to 100,000 generations it may
+  look like the ones in the <a href='gallery.html'>Gallery</a>.
   <p>
   You may right click on the top image to save it as an SVG. Left click one of the alternates
   below to watch that one instead.
