IE & Firefox fixes

--- a/index.html
+++ b/index.html
@@ -97,4 +97,5 @@
   Written in LiveScript by <a href="mailto:svachalek@gmail.com">Scott Vachalek</a>.
   Inspired by <a href='http://rogeralsing.com/2008/12/07/genetic-programming-evolution-of-mona-lisa/'>Roger Alsing's Mona Lisa</a>.
 
+<script src='base64.js'></script>
 <script src='svgdna.js'></script>
