--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <meta charset='utf-8'>
 
-<title>SVG DNA</title>
+<title>SVG Evo</title>
 
 <link rel='icon' type='image/png' sizes='any' href='images/dna.png'>
-<link rel='stylesheet' type='text/css' href='svgdna.css'>
+<link rel='stylesheet' type='text/css' href='svg_evo.css'>
 
 <h2>Vector Painting Evolution</h2>
 
@@ -90,12 +90,12 @@
 </div>
 
 <p id='footer'>
-  <a href='https://github.com/svachalek/svgdna'>The source code is here.</a>
+  <a href='https://github.com/svachalek/svg_evo'>The source code is here.</a>
   Written in LiveScript by <a href="mailto:svachalek@gmail.com">Scott Vachalek</a>.
   Inspired by <a href='http://rogeralsing.com/2008/12/07/genetic-programming-evolution-of-mona-lisa/'>Roger Alsing's Mona Lisa</a>.
 
 <script src='base64.js'></script>
-<script src='svgdna.js'></script>
+<script src='svg_evo.js'></script>
 
 <script type="text/javascript">
   var _gaq = _gaq || [];
