--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
 <script src='base64.js'></script>
 <script src='svg_evo.js'></script>
+<script src='control.js'></script>
 
 <script type="text/javascript">
   var _gaq = _gaq || [];
