refactor statistics tracking

--- a/index.html
+++ b/index.html
@@ -59,12 +59,16 @@
   <tr><th class='major'>Generations:    <td id='generation'>0
   <tr><th class='major'>Time:           <td id='time'>0
   <tr><th>Generations/sec:              <td id='speed'>N/A
-  <tr><th>Add shape success:            <td id='success-add'>0%
-  <tr><th>Remove shape success:         <td id='success-remove'>0%
-  <tr><th>Reorder shapes success:       <td id='success-order'>0%
-  <tr><th>Change outline success:       <td id='success-shape'>0%
-  <tr><th>Recolor success:              <td id='success-color'>0%
-  <tr><th>Crossover success:            <td id='success-cross'>0%
+  <tr><th>Add shape success:            <td id='success-add-shape'>0%
+  <tr><th>Remove shape success:         <td id='success-remove-shape'>0%
+  <tr><th>Reorder shapes success:       <td id='success-reorder-shapes'>0%
+  <tr><th>Add point success:            <td id='success-add-point'>0%
+  <tr><th>Remove point success:         <td id='success-remove-point'>0%
+  <tr><th>Move center success:          <td id='success-move-center'>0%
+  <tr><th>Move point success:           <td id='success-move-point'>0%
+  <tr><th>Change RGB success:           <td id='success-rgb'>0%
+  <tr><th>Change opacity success:       <td id='success-alpha'>0%
+  <tr><th>Crossover success:            <td id='success-crossover'>0%
   <tr><th>                              <td><button id='restart'>START OVER
 </table>
 
