--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <p>
   The results are compared to the image labeled <em>Target</em>, paying particular attention 
   to dark areas shown in the image labeled <em>Weights</em>.
-  The dark areas in the <em>Differences</em> image show where the target image is most different
+  The colored areas in the <em>Differences</em> image show where the target image is most different
   from the best solution.
   <p>
   When a mutation is better than its parent or when a crossover is better than both of its parents
