--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <p>
   The results are compared to the image labeled <em>Target</em>, paying particular attention 
   to dark areas shown in the image labeled <em>Weights</em>.
-  The dark areas in the <em>Differences</em> image show where the target image is most different
+  The colored areas in the <em>Differences</em> image show where the target image is most different
   from the best solution.
   <p>
   When a mutation is better than its parent or when a crossover is better than both of its parents
@@ -59,12 +59,16 @@
   <tr><th class='major'>Generations:    <td id='generation'>0
   <tr><th class='major'>Time:           <td id='time'>0
   <tr><th>Generations/sec:              <td id='speed'>N/A
-  <tr><th>Add shape success:            <td id='success-add'>0%
-  <tr><th>Remove shape success:         <td id='success-remove'>0%
-  <tr><th>Reorder shapes success:       <td id='success-order'>0%
-  <tr><th>Change outline success:       <td id='success-shape'>0%
-  <tr><th>Recolor success:              <td id='success-color'>0%
-  <tr><th>Crossover success:            <td id='success-cross'>0%
+  <tr><th>Add shape success:            <td id='success-add-shape'>0%
+  <tr><th>Remove shape success:         <td id='success-remove-shape'>0%
+  <tr><th>Reorder shapes success:       <td id='success-reorder-shapes'>0%
+  <tr><th>Add point success:            <td id='success-add-point'>0%
+  <tr><th>Remove point success:         <td id='success-remove-point'>0%
+  <tr><th>Move center success:          <td id='success-move-center'>0%
+  <tr><th>Move point success:           <td id='success-move-point'>0%
+  <tr><th>Change RGB success:           <td id='success-rgb'>0%
+  <tr><th>Change opacity success:       <td id='success-alpha'>0%
+  <tr><th>Crossover success:            <td id='success-crossover'>0%
   <tr><th>                              <td><button id='restart'>START OVER
 </table>
 
@@ -82,12 +86,6 @@
     <p>Differences</p>
   </div>
 </section>
-
-<div id='legend'>
-  <div class='legend survivor'> </div>    <label>Survivor</label>
-  <div class='legend mutant'> </div>      <label>Mutant</label>
-  <div class='legend crossover'> </div>   <label>Crossover</label>
-</div>
 
 <p id='footer'>
   <a href='https://github.com/svachalek/svg_evo'>The source code is here.</a>
