update to use ES6

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <p id='footer'>
   <a href='https://github.com/svachalek/svg_evo'>The source code is here.</a>
-  Written in LiveScript by <a href="mailto:svachalek@gmail.com">Scott Vachalek</a>.
+  Written by <a href="mailto:svachalek@gmail.com">Scott Vachalek</a>.
   Inspired by <a href='http://rogeralsing.com/2008/12/07/genetic-programming-evolution-of-mona-lisa/'>Roger Alsing's Mona Lisa</a>.
 
 <script src='base64.js'></script>
