use ES6 modules

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <div id='intro'>
   <p>
-  This page starts by creating a set of paintings that each contain one triangle. These 
+  This page starts by creating a set of paintings that each contain one triangle. These
   paintings are mutated by adding, removing, or altering components, and also cross-bred with
-  other paintings. 
+  other paintings.
   <p>
-  The results are compared to the image labeled <em>Target</em>, paying particular attention 
+  The results are compared to the image labeled <em>Target</em>, paying particular attention
   to dark areas shown in the image labeled <em>Weights</em>.
   The colored areas in the <em>Differences</em> image show where the target image is most different
   from the best solution.
@@ -92,19 +92,5 @@
   Written by <a href="mailto:svachalek@gmail.com">Scott Vachalek</a>.
   Inspired by <a href='http://rogeralsing.com/2008/12/07/genetic-programming-evolution-of-mona-lisa/'>Roger Alsing's Mona Lisa</a>.
 
-<script src='base64.js'></script>
-<script src='svg_evo.js'></script>
-<script src='control.js'></script>
-
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-37393699-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
-
+<script src="base64.js" type="module"></script>
+<script src="svg_evo.js" type="module"></script>
